# vAirify

./: .gitattributes  .gitignore  LICENSE  README.md  compose.yaml  vAirify Test Strategy1.4.xmind
air-quality-backend/: .dockerignore  Dockerfile  Dockerfile.api  Dockerfile.cron  Dockerfile.forecast  Dockerfile.forecast.cron  Dockerfile.insitu  Dockerfile.insitu.cron  README.md  logging.ini  pyproject.toml
air-quality-backend/api/: logging.ini  requirements-dev.txt  requirements.txt
air-quality-backend/conda/: api_environment.yml  bootstrap_environment.yml  environment.yml  etl.yml  etl_environment.yml  etl_poetry_env.yml  linting_environment.yml  test_environment.yml  utility_environment.yml
air-quality-backend/cron/: crontab  crontab.forecast  crontab.insitu
air-quality-backend/database_tests/: __init__.py
air-quality-backend/docs/: liquibase.md  run_fast_api_tutorial.md
air-quality-backend/etl/: pyproject.toml
air-quality-backend/liquibase/: 12_locations_schema_validation.xml  forecast_data.xml  in_situ_data.xml  master_changelog.xml
air-quality-backend/scripts/: run_forecast_etl.py  run_in_situ_etl.py  run_purge_old_data.py  test-parallel-interp.py
air-quality-backend/shared/: logging.ini  pyproject.toml  requirements-test.txt  requirements.test.txt
air-quality-backend/system_tests/: CAMS_forecast_data_tests.py  cams_known_grib_test.py  cities_data.py  context.py  forecast_calibration_tests.py  grib_getter.py
air-quality-backend/tests/: calculator_test.py  forecast_adapter_test.py  forecast_dao_test.py  forecast_data_test.py  mock_openaq_data.py  (+6 more)
(+504 files in other folders)
