[tool.poetry]
name = "air_quality"
version = "0.1.0"
description = ""
authors = ["weather-machinists"]
readme = "README.md"

[tool.poetry.dependencies]
cads-api-client = "1.0.3"
cdsapi = "0.7.0"
fastapi = "0.111.0"
flake8 = "7.0.0"
python = "3.11.9"
pymongo = "4.6.3"
python-dotenv = "1.0.1"
requests = "2.31.0"
scipy = "1.13.0"
tqdm = "4.66.4"
typing-extensions = "4.11.0"
multiurl = "0.3.1"
six = "1.16.0"
setuptools = "70.0.0"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
cerberus = "1.3.5"
coverage = "7.5.0"
freezegun = "1.5.1"
mongomock = "^4.1.2"
pytest = "8.1.1"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"